deleting extra css

--- a/frontend/donations-spa/styles/layout/_menu.scss
+++ b/frontend/donations-spa/styles/layout/_menu.scss
@@ -1,4 +1,4 @@
-.layout-sidebar {
+/* .layout-sidebar {
     position: fixed;
     width: 300px;
     height: calc(100vh - 9rem);
@@ -154,3 +154,4 @@
     max-height: 0 !important;
     transition: max-height 0.45s cubic-bezier(0, 1, 0, 1);
 }
+ */
