--- a/frontend/donations-spa/styles/layout/_config.scss
+++ b/frontend/donations-spa/styles/layout/_config.scss
@@ -1,4 +1,4 @@
-.layout-config-button {
+/*  .layout-config-button {
     display: block;
     position: fixed;
     width: 3rem;
@@ -40,3 +40,4 @@
         }
     }
 }
+  */
