--- a/frontend/donations-spa/styles/layout/_content.scss
+++ b/frontend/donations-spa/styles/layout/_content.scss
@@ -1,4 +1,4 @@
-.layout-main-container {
+/*  .layout-main-container {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -10,3 +10,4 @@
 .layout-main {
     flex: 1 1 auto;
 }
+  */
