--- a/frontend/donations-spa/styles/layout/_footer.scss
+++ b/frontend/donations-spa/styles/layout/_footer.scss
@@ -1,4 +1,4 @@
-.layout-footer {
+/* .layout-footer {
     transition: margin-left $transitionDuration;
     display: flex;
     align-items: center;
@@ -6,3 +6,4 @@
     padding-top: 1rem;
     border-top: 1px solid var(--surface-border);
 }
+ */
