--- a/frontend/donations-spa/styles/layout/_preloading.scss
+++ b/frontend/donations-spa/styles/layout/_preloading.scss
@@ -1,4 +1,4 @@
-.preloader {
+/* .preloader {
     position: fixed;
     z-index: 999999;
     background: #edf1f5;
@@ -45,3 +45,4 @@
         opacity: 0;
     }
 }
+ */
