--- a/frontend/donations-spa/styles/demo/badges.scss
+++ b/frontend/donations-spa/styles/demo/badges.scss
@@ -10,7 +10,7 @@
 }
 
 .product-badge {
-    &.status-active {
+    &.status-created {
         background: #C8E6C9;
         color: #256029;
     }
